# volatile

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: ci.yml  lint.yml
cmake/: CompileShaders.cmake  VolatileBuildOptions.cmake
docs/: api.md  cli.md  python.md
py/: pyproject.toml  setup.py  test_eval_metrics.py  test_napari_trainer.py  test_nnunet.py  test_proofreader.py  test_tifxyz.py  test_unet3d.py  test_youssef_mae.py
py/volatile/: __init__.py  __init__.pyi  _core.c  auto_seg.py  eval.py  fit.py  imgproc.py  ink.py  metrics.py  napari_plugin.py  napari_trainer.py  neural_tracing.py  proofreader.py  rendering.py  seg.py  structure_tensor.py  tifxyz.py  zarr_tasks.py
py/volatile/ml/: __init__.py  augment.py  auxiliary.py  config.py  data.py  dataset.py  infer.py  ink_detection.py  loss.py  model.py  nnunet.py  scheduler.py  self_supervised.py  semi_supervised.py  topo_loss.py  train.py  transformers.py  unet3d.py  youssef_mae.py
scripts/: bolt.sh  build.sh  compile_shaders.sh  coverage.sh  fmt.sh  lint.sh  pgo.sh  test.sh  test_s3_mirror.sh
src/cli/: CMakeLists.txt  cli_compress.c  cli_compress.h  cli_connect.c  cli_connect.h  cli_convert.c  cli_convert.h  cli_diff.c  cli_diff.h  cli_flatten.c  cli_flatten.h  cli_grow.c  cli_grow.h  cli_inpaint.c  cli_inpaint.h  cli_mask.c  cli_mask.h  cli_metrics.c  cli_metrics.h  cli_mirror.c  cli_mirror.h  cli_normals.c  cli_normals.h  cli_progress.h  cli_render.c  cli_render.h  cli_serve.c  cli_serve.h  cli_stats.c  cli_stats.h  cli_transform.c  cli_transform.h  cli_video.c  cli_video.h  cli_winding.c  cli_winding.h  cli_zarr_ops.c  cli_zarr_ops.h  main.c
src/core/: CMakeLists.txt  abf.c  abf.h  binary_pyramid.c  binary_pyramid.h  cache.c  cache.h  chunk.c  chunk.h  compress4d.c  compress4d.h  compress4d_zarr.c  compress4d_zarr.h  diffusion.c  diffusion.h  geom.c  geom.h  geom_mesh.c  graph_solver.c  graph_solver.h  gridstore.c  gridstore.h  hash.c  hash.h  imgproc.c  imgproc.h  io.c  io.h  json.c  json.h  lineseg.c  lineseg.h  log.c  log.h  math.c  math.h  net.c  net.h  optimizer.c  optimizer.h  (+24 more)
src/gpu/: CMakeLists.txt  dx12.c  dx12.h  gpu.c  gpu.h  mtl.c  mtl.h  shader.c  shader.h  vk.c  vk.h
src/gpu/shaders/: composite.comp  marching_cubes.comp  marching_cubes_tables.h  resample.comp  window_level.comp
src/gui/: CMakeLists.txt  about_dialog.c  about_dialog.h  annotate.c  annotate.h  app.c  app.h  approval_mask.c  approval_mask.h  browse.c  browse.h  console.c  console.h  cred_dialog.c  cred_dialog.h  crosshair.c  crosshair.h  draw_panel.c  draw_panel.h  drawing.c  drawing.h  dt_panel.c  dt_panel.h  file_dialog.c  file_dialog.h  filewatcher.c  filewatcher.h  focus_history.c  focus_history.h  inotify_util.h  keybind.c  keybind.h  keybinds_dialog.c  keybinds_dialog.h  layout.c  layout.h  main.c  menubar.c  menubar.h  neural_trace.c  (+51 more)
src/gui_qt/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  ConsoleWidget.cpp  ConsoleWidget.h  KeybindManager.cpp  KeybindManager.h  KeybindsDialog.cpp  KeybindsDialog.h  MainWindow.cpp  MainWindow.h  S3BrowserDialog.cpp  S3BrowserDialog.h  SegmentationPanel.cpp  SegmentationPanel.h  SettingsDialog.h  SliceViewer.cpp  SliceViewer.h  StatusBar.cpp  StatusBar.h  SurfaceTreeWidget.cpp  SurfaceTreeWidget.h  ViewerControlsPanel.cpp  ViewerControlsPanel.h  VolumeViewer.cpp  VolumeViewer.h  main.cpp
src/render/: CMakeLists.txt  camera.c  camera.h  cmap.c  cmap.h  composite.c  composite.h  overlay.c  overlay.h  tile.c  tile.h
src/server/: CMakeLists.txt  collab.c  collab.h  db.c  db.h  gitstore.c  gitstore.h  protocol.c  protocol.h  review.c  review.h  srv.c  srv.h  stream.c  stream.h  sync.c  sync.h  versioning.c  versioning.h
test/c/: CMakeLists.txt  bench_compress4d.c  test_abf.c  test_about_dialog.c  test_annotate.c  test_approval_mask.c  test_binary_pyramid.c  test_browse.c  test_cache.c  test_camera.c  test_chunk.c  test_cli_convert.c  test_cli_grow.c  test_cmap.c  test_collab.c  test_composite.c  test_compress4d.c  test_compress4d_cli.c  test_compress4d_zarr.c  test_console.c  test_cred_dialog.c  test_crosshair.c  test_db.c  test_diffusion.c  test_draw_panel.c  test_drawing.c  test_dt_panel.c  test_file_dialog.c  test_filewatcher.c  test_focus_history.c  test_geom.c  test_geom_mesh.c  test_gitstore.c  test_gpu.c  test_gpu_compute.c  test_graph_solver.c  test_gridstore.c  test_hash.c  test_imgproc.c  test_inpaint.c  (+62 more)
test/fuzz/: CMakeLists.txt  fuzz_compress4d.c  fuzz_json.c
test/plugins/: CMakeLists.txt  test_plugin.c  test_plugin_mgr.c
test/py/: test_auto_seg.py  test_imgproc.py  test_integration.py  test_ml.py  test_neural_tracing.py  test_nnunet.py  test_rendering.py  test_seg.py  test_smoke.py  test_structure_tensor.py  test_topo_loss.py  test_version.py  test_vol.py  test_zarr_tasks.py
